scripts/test/fixtures/admission-webhook-bad.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sample
webhooks:
  - name: mutate.example.test
    timeoutSeconds: 31
